--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,21 @@
         <item name="android:layout_marginEnd">33dp</item>
     </style>
 
+    <style name="Text.OutputTextView">
+        <item name="android:layout_marginTop">50dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">33dp</item>
+        <item name="android:layout_marginEnd">33dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="Text.HintTextView">
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">0dp</item>
+    </style>
+
 </resources>
