--- a/app/src/main/res/layout/activity_auto_details.xml
+++ b/app/src/main/res/layout/activity_auto_details.xml
@@ -127,7 +127,7 @@
         app:layout_constraintTop_toBottomOf="@+id/address" />
 
     <Button
-        android:id="@+id/confirmChoise"
+        android:id="@+id/confirmChoice"
         style="@style/Button.Scroll"
         android:text="@string/submit"
         app:layout_constraintBottom_toBottomOf="parent"
