--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/montserrat_alternates</item>
+        <item>@font/montserrat_subrayada</item>
         <item>@font/montserrat_subrayada_bold</item>
+        <item>@font/telex</item>
     </array>
 </resources>
