--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -2,37 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
     android:divider="@color/colorPrimaryDark"
     android:orientation="horizontal">
 
 
     <TextView
-        android:id="@+id/stateNumber"
+        android:id="@+id/stateNumberListItem"
+        style="@style/CarListItem"
+        android:layout_width="74dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0"
+        android:gravity="center"
         android:text="A111AA"
         app:layout_constraintEnd_toStartOf="@+id/brandList"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/CarListItem" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:layout_width="197dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/brandListItem"
+            android:layout_width="197dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.75"
+            android:paddingStart="10dp"
+            android:text="LADA"
+            android:textSize="8pt" />
+
+        <TextView
+            android:id="@+id/modelListItem"
+            android:layout_width="196dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingStart="10dp"
+            android:text="Priora"
+            android:textAlignment="textStart" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/brandList"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textAlignment="center"
+        android:id="@+id/statusListItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="LADA" />
-    <TextView
-        android:id="@+id/modelList"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="1"
-        android:text="Priora" />
-    <TextView
-        android:id="@+id/statusList"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="1"
-        android:text="Свободна" />
+        android:gravity="center"
+        android:text="Свободна"
+        android:textAlignment="center" />
+
 
 </LinearLayout>
