--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,12 @@
         android:id="@+id/carList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="100dp"
-        android:layout_marginTop="10dp"
-        android:dividerHeight="2dp"
+        android:layout_marginTop="40dp"
         android:divider="@color/colorPrimaryDark"
+        android:dividerHeight="2dp"
+        android:minHeight="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
