--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -7,6 +7,31 @@
     android:orientation="horizontal">
 
 
+    <LinearLayout
+        android:layout_width="197dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/brandListItem"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.75"
+            android:paddingStart="10dp"
+            android:text="LADA"
+            android:textSize="8pt" />
+
+        <TextView
+            android:id="@+id/modelListItem"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingStart="10dp"
+            android:text="Priora"
+            android:textAlignment="textStart" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/stateNumberListItem"
         style="@style/CarListItem"
@@ -18,35 +43,11 @@
         app:layout_constraintEnd_toStartOf="@+id/brandList"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:layout_width="197dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/brandListItem"
-            android:layout_width="197dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:paddingStart="10dp"
-            android:text="LADA"
-            android:textSize="8pt" />
-
-        <TextView
-            android:id="@+id/modelListItem"
-            android:layout_width="196dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingStart="10dp"
-            android:text="Priora"
-            android:textAlignment="textStart" />
-    </LinearLayout>
-
     <TextView
         android:id="@+id/statusListItem"
-        android:layout_width="match_parent"
+        android:layout_width="78dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:gravity="center"
         android:text="Свободна"
         android:textAlignment="center" />
