--- a/app/src/main/res/layout/activity_auto_details.xml
+++ b/app/src/main/res/layout/activity_auto_details.xml
@@ -26,6 +26,7 @@
             style="@style/Text.OutputTextView"
             android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chosenAutoHeaderText" />
 
         <TextView
