--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="33dp"
         android:divider="@color/colorPrimaryDark"
         android:dividerHeight="2dp"
         android:minHeight="100dp"
