--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,4 +4,10 @@
         <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorOnPrimary">@color/white</item>
     </style>
+    <style name="Theme.NewApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.NewApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.NewApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
