--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/loginText">
 
             <EditText
-                android:id="@+id/nameField"
+                android:id="@+id/firstNameField"
                 style="@style/Text.EditText"
                 android:layout_marginTop="100dp"
                 android:ems="10"
@@ -52,7 +52,7 @@
                 android:inputType="date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nameField" />
+                app:layout_constraintTop_toBottomOf="@+id/firstNameField" />
 
             <EditText
                 android:id="@+id/licenseNumberField"
