--- a/app/src/main/res/layout/activity_text_support.xml
+++ b/app/src/main/res/layout/activity_text_support.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.TextSupportActivity">
 
     <TextView
-        android:id="@+id/bugReportTextView"
+        android:id="@+id/loginTextView"
         style="@style/Text.TextView"
         android:text="Сообщить об ошибке"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bugReportTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />
 
     <Button
         android:id="@+id/bugReportButton"
