--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.main.MainActivity">
 
     <TextView
         android:id="@+id/textView2"
@@ -19,8 +19,8 @@
         android:id="@+id/carList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="33dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="33dp"
         android:divider="@color/colorPrimaryDark"
         android:dividerHeight="2dp"
