--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:divider="@color/colorPrimaryDark"
+    android:layout_height="100dp"
+    android:divider="?android:listDivider"
+    android:showDividers="middle"
+    android:dividerPadding="2.5dp"
     android:orientation="horizontal">
-
 
     <LinearLayout
         android:layout_width="197dp"
@@ -16,32 +17,32 @@
         <TextView
             android:id="@+id/brandListItem"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:paddingStart="10dp"
             android:text="LADA"
-            android:textSize="15pt" />
+            android:textSize="12pt" />
 
         <TextView
             android:id="@+id/modelListItem"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:paddingStart="10dp"
             android:text="Priora"
-            android:textSize="10pt"
-            android:textAlignment="textStart" />
+            android:textAlignment="textStart"
+            android:textSize="8pt" />
 
         <TextView
             android:id="@+id/stateNumberListItem"
             style="@style/CarListItem"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="textStart"
-            android:paddingTop="6dp"
-            android:paddingStart="10dp"
-            android:text="A111AA"
+            android:layout_height="20dp"
             android:fontFamily="@font/road_numbers_otf"
-            android:textSize="15pt"
+            android:paddingStart="10dp"
+            android:paddingTop="6dp"
+            android:text="A111AA"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
+            android:textSize="12pt"
             app:layout_constraintEnd_toStartOf="@+id/brandList"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
@@ -49,7 +50,7 @@
     <TextView
         android:id="@+id/statusListItem"
         android:layout_width="78dp"
-        android:layout_height="match_parent"
+        android:layout_height="102dp"
         android:layout_weight="0.33"
         android:gravity="center"
         android:text="Свободна"
