--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/welcome_to_farsharing</item>
+    </style>
+
     <style name="Button">
         <item name="android:background">@color/colorAccent</item>
         <item name="android:textColor">@color/textButton</item>
