Improve detailed car info view

--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -5,12 +5,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.CarDetailsActivity">
+    tools:context=".activity.cardetails.CarDetailsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".activity.CarDetailsActivity">
+        tools:context=".activity.cardetails.CarDetailsActivity">
+
+        <TextView
+            android:id="@+id/stateNumber"
+            style="@style/Text.OutputTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:textSize="12pt"
+            android:fontFamily="@font/road_numbers_otf"
+            android:minWidth="80dp"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@+id/pricePerHour"
+            app:layout_constraintTop_toBottomOf="@+id/address" />
+
+        <TextView
+            android:id="@+id/textView5"
+            style="@style/Text.HintTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Гос. Номер"
+            app:layout_constraintBottom_toTopOf="@+id/stateNumber"
+            app:layout_constraintStart_toStartOf="@+id/stateNumber" />
 
         <TextView
             android:id="@+id/chosenAutoHeaderText"
@@ -24,7 +46,6 @@
         <TextView
             android:id="@+id/brand"
             style="@style/Text.OutputTextView"
-            android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chosenAutoHeaderText" />
@@ -32,7 +53,6 @@
         <TextView
             android:id="@+id/model"
             style="@style/Text.OutputTextView"
-            android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/brand" />
@@ -40,7 +60,6 @@
         <TextView
             android:id="@+id/bodyType"
             style="@style/Text.OutputTextView"
-            android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/model" />
@@ -48,7 +67,6 @@
         <TextView
             android:id="@+id/color"
             style="@style/Text.OutputTextView"
-            android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bodyType" />
@@ -56,7 +74,6 @@
         <TextView
             android:id="@+id/address"
             style="@style/Text.OutputTextView"
-            android:text="@string/helloWorld"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/color" />
@@ -67,7 +84,6 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="32dp"
             android:minWidth="80dp"
-            android:text="@string/helloWorld"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/address" />
 
@@ -76,9 +92,10 @@
             style="@style/Text.OutputTextView"
             android:layout_width="wrap_content"
             android:minWidth="200dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pricePerHour" />
+            app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
         <TextView
             android:id="@+id/textView16"
@@ -133,11 +150,10 @@
             android:id="@+id/rentForHours"
             style="@style/Text.OutputTextView"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="64dp"
             android:minWidth="80dp"
-            android:text="@string/helloWorld"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/address" />
+            android:layout_marginStart="33dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pricePerHour" />
 
         <Button
             android:id="@+id/confirmChoice"
@@ -145,9 +161,23 @@
             android:text="@string/submit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/total"
+            app:layout_constraintVertical_bias="0.426"
             tools:ignore="TextContrastCheck" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="33dp"
+            android:layout_marginEnd="33dp"
+            android:progress="3"
+            android:max="24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rentForHours" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
