--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/carList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="33dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="33dp"
+        android:layout_marginBottom="33dp"
         android:divider="@color/colorPrimaryDark"
         android:dividerHeight="2dp"
         android:minHeight="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
